# bee_optical_flow

./: .gitignore  README.md  main.py  optical_count.py  pyproject.toml  roi_ent_info.txt  sep_blob.py  vis.py  vis_arr2.py
analysis/video_features/archive_intermediate_20260608/: feature_correlation_groups.csv  feature_error_correlations.csv  feature_error_correlations_no_total.csv  feature_error_correlations_outliers_iqr.csv  feature_error_covariances.csv  feature_error_covariances_no_total.csv  feature_error_covariances_zscore.csv  (+6 more)
bee_count_output/: entrance_count_3sec.csv  entrance_count_3sec_15.csv  entrance_count_3sec_16.csv  entrance_events.csv  entrance_events_15.csv  entrance_events_16.csv  entrance_flux_frame.csv  entrance_flux_frame_15.csv  entrance_flux_frame_16.csv
docs/: bee_entrance_event_counting.md  bee_entrance_noise_filtering.md  bee_entrance_persistence_filter.md  presentation.html  presentation.md
src/: __init__.py  analyze_video_feature_errors.py  bee_entrance_count.py  capture.py  extract_video_features.py  main.py  optical_count.py  vis_arr.py
validation/: batch_summary.xlsx  build_data_viewer.py  data-16-20.xlsx  data-20.xlsx  data_viewer.html  data_viewer.md  draw_graph.py  linear_regression_report.md  linear_regression_stats.csv  merged_data.xlsx  regression_model_comparison.csv  spring2026summary.xlsx
validation/data/: batch_summary.csv  data.xlsx  merged_data.xlsx  real_data_s.xlsx
validation/legacy/: compare_regression_models.py  linear_regression_report.md
validation/output/: data_viewer.html  regression_model_comparison.csv
(+4 files in other folders)
