[project]
name = "optical-flow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.0.0",
    "opencv-python>=4.13.0.92",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "seaborn>=0.13.2",
]
